Simplified and small fix
