# auth/auth_endpoint.go
@@ -1,6 +1,12 @@
 package auth
 
-import "github.com/gofiber/fiber/v3"
+import (
+	"os"
+
+	"github.com/absorkun/darinol/response"
+	jwtware "github.com/absorkun/darinol/temporary/jwt"
+	"github.com/gofiber/fiber/v3"
+)
 
 type endpoint struct {
 	Router  fiber.Router
@@ -14,4 +20,10 @@ func NewEndpoint(router fiber.Router, handler handler) *endpoint {
 func (e *endpoint) Run() {
 	e.Router.Post("/login", e.Handler.Login)
 	e.Router.Post("/register", e.Handler.Register)
+	e.Router.Get("/session", jwtware.New(jwtware.Config{
+		SigningKey: jwtware.SigningKey{Key: []byte(os.Getenv("KEY"))},
+		ErrorHandler: func(c fiber.Ctx, err error) error {
+			return response.BadRequest(c, err.Error())
+		},
+	}), e.Handler.Session)
 }
