# docs/swagger.json
@@ -72,6 +72,34 @@
                 }
             }
         },
+        "/api/v1/auth/session": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessStruct"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/todos": {
             "get": {
                 "security": [
@@ -425,7 +453,8 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "password": {
                     "type": "string",
@@ -441,7 +470,8 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "id": {
                     "type": "integer"
@@ -526,7 +556,8 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "id": {
                     "type": "integer"
@@ -548,7 +579,8 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "id": {
                     "type": "integer"
@@ -565,8 +597,10 @@
     },
     "securityDefinitions": {
         "ApiKeyAuth": {
+            "description": "Format input: Bearer (access_token)",
             "type": "apiKey",
-            "name": "Authorization"
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
